# Hazim

./: .gitignore
LunerOS/OS/build-binutils/binutils-with-gold-2.46/: Makefile  config.status  sha256.sum
LunerOS/OS/build-binutils/binutils-with-gold-2.46/bfd/: Makefile  config.cache  config.h  config.status  libbfd.la  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/binutils/: Makefile  config.cache  config.h  config.status  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/etc/: Makefile  config.status
LunerOS/OS/build-binutils/binutils-with-gold-2.46/gas/: Makefile  config.cache  config.h  config.status  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/gprof/: Makefile  config.cache  config.status  gprof.info  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/ld/: Makefile  config.cache  config.h  config.status  ld.info  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/libctf/: Makefile  config.cache  config.h  config.lt  config.status  libctf-nobfd.la  libctf.la  libtool
LunerOS/OS/build-binutils/binutils-with-gold-2.46/libiberty/: Makefile  config.cache  config.status
LunerOS/OS/build-binutils/binutils-with-gold-2.46/libsframe/: libtool  (+3 more)
MicroISO/: main.py
MicroISO/compressor/: Lzma.py  huffman.py  kernal.rs  main.py
MicroISO/decompressor/: Lzma.py  huffman.py  main.py
OS/: Cargo.toml  linker.ld  run  run.sh
OS/.cargo/: config.toml
OS/Documents/: ABI.txt  info.txt  project story.txt
OS/src/: Luner-ABI.rs  lelite.rs  lib.rs  luner_abi.rs  main.rs  testframwork.rs  vga_buffer.rs
base/: info.txt
(+267 files in other folders)
